--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,19 +26,19 @@ jobs:
 
     #Step3: Build the project with Maven
     - name: Build with Maven
-      run: mvn -B package --file ProductService/pom.xml
+      run: mvn -B package --file pom.xml
 
     # Step 4: Run Unit Tests
     - name: Run Unit Tests
-      run: mvn -B test --file ProductService/pom.xml
+      run: mvn -B test --file pom.xml
       
     - name: Generate Code Coverage
-      run: mvn jacoco:report --file ProductService/pom.xml
+      run: mvn jacoco:report --file pom.xml
       
     # Step 5: Run Integration Tests
     - name: Run Integration Tests
-      run: mvn -B verify --file ProductService/pom.xml
+      run: mvn -B verify --file pom.xml
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
-      run: mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph --file ProductService/pom.xml
+      run: mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph --file pom.xml
